@@ -1,3 +1,11 @@
+2010-01-17 Fred Kiefer <fredkiefer@gmx.de>
+
+	* Headers/CoreFoundation/CFDictionary.h,
+	* Headers/CoreFoundation/CFCharacterSet.h: Remove remaining
+	includes of Foundation.h.
+	* Source/CFDictionary.m: Adopt to this change by using type casts.
+	* Source/CFString.m: Add include for NSArray.h.
+
 2010-01-17 Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Source/CFBase.m: Implemented kCFAllocatorNull and kCFAllocatorMalloc.
@@ -11,7 +19,7 @@
 	* Source/CFArray.m,
 	* Source/CFData.m,
 	* Source/CFString.m: Adopt to this change by using plenty of type
-	casts. 
+	casts.
 
 2010-01-16 Stefan Bidigaray <stefanbidi@gmail.com>
 
